--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Từ chối thì làm gì có chương sau =))
 [[Thử sức]] nào!</tw-passagedata><tw-passagedata pid="5" name="buổi gặp đầu tiên" tags="" position="299,365.5" size="100,100">Tiếp bạn là anh Ngọc, và Nam Đoàn.
 Bla bla, phổ cập về công việc, business của công ty... bạn thấy dần hứng thú với công việc.
 Cũng 2 năm rồi bạn làm việc ở tập đoàn lớn, đang thấy khó chịu với sự gò bó, quan liêu, chậm chạp... nên nghe thấy công việc bạn thấy có vẻ phù hợp với mình.
-Và đặc biệt là khi nói chuyện với sếp Nam. &lt;img src=&quot;/imgs/cto.png&quot; /&gt;
+Và đặc biệt là khi nói chuyện với sếp Nam. &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/cto.png&quot; /&gt;
 Ít khi bạn thấy ngưỡng mộ với người đối diện như khi nói chuyện với sếp, là cảm giác khi gặp người hiểu nhiều biết rộng hơn bạn nhiều về công nghệ. 
 Và thế là bắt đầu cuộc sống với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="302,499.5" size="100,100">Có nhiều thứ khi làm rồi mới hiểu.
 Chẳng hạn như về:
@@ -38,40 +38,41 @@ Chẳng hạn như về:
 Nói chung nhiều thứ khó khăn, khó nhằn. Về kĩ thuật thì không khó, nhưng về vận hành, về business, về thị trường... lại khoai vô cùng.
 Nhưng may mắn trong cuộc chiến đó, bạn luôn có sự hỗ trợ.
 &quot;It&#39;s dangerous to go alone take [[this]]&quot;
-&lt;img src=&quot;/imgs/zelda.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
 Phốt thì nhiều lắm rồi, ví dụ:
-&lt;img src=&quot;/imgs/fe_credit_doino.png&quot; /&gt;
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/fe_credit_doino.png&quot; /&gt;
 
 Rồi thì lãi suất theo bạn thì vẫn là cắt cổ.
 
 Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền.
 Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn tốt hơn là vay ở cột điện.
-Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="422,649.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
+Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="422,649.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
 Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác. 
-Và như anh &lt;img src=&quot;/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
-Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="Telco" tags="" position="542,649.5" size="100,100">Bạn từng làm việc cho một telco rồi
-Chung quy telco họ chỉ muốn nhiều tiền, ít việc, né trách nhiệm về pháp luật</tw-passagedata><tw-passagedata pid="10" name="this" tags="" position="201,749.5" size="100,100">Đồng nghiệp,
+Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
+Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="201,749.5" size="100,100">Đồng nghiệp,
 &quot;Muốn đi xa thì...&quot;, ấy thôi, bạn không triết lý như vậy.
 Bạn chỉ thấy rằng việc gì khó, thì cần nhiều người.
 Và, may mắn bạn được làm việc cùng với nhiều người giỏi.
 Bạn thấy rằng: so với mặt bằng chung, đồng nghiệp của bạn có kĩ năng tốt, nhanh nhẹn, có trách nhiệm... bla bla. May quá.
 Chứ chơi Dota 2, ở SEA, rank 3k, nên bạn biết từ &quot;đồng đội tốt&quot; nó thiêng liêng như thế nào.
-&lt;img src=&quot;/imgs/dota.jpeg&quot; /&gt;
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/dota.jpeg&quot; /&gt;
 Nói đến đây, bạn thật lòng muốn xin lỗi đồng nghiệp, vì bạn... giải nghệ game lâu rồi...
-Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="11" name="Chương 3: Ăn, chơi" tags="" position="200,899.5" size="100,100">Bạn có trí nhớ tốt
+Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="10" name="Chương 3: Ăn, chơi" tags="" position="200,899.5" size="100,100">Bạn có trí nhớ tốt
 Bạn hay được bảo là là thù dai, nhớ lâu (gift hay curse?)
 Người ta hay bảo là ấn tượng đầu tiên là quan trọng nhất...
 ...
-Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;/imgs/pepeknife.jpeg&quot;&gt;
-Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="12" name="sự thật" tags="" position="200,1049.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
+Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;/imgs/pepeknife.jpeg&quot;&gt;; mấy khi được hưởng cảm giác ngộ độc 2 ngày liên.
+Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="200,1049.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
 Ngay trong lúc bạn đang gõ những dòng này, thì mọi người lại ăn...
-&lt;img src=&quot;/imgs/office_hn.png&quot; /&gt;
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/office_hn.png&quot; /&gt;
+...
 Và thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được kéo dài lê thê chỏ đủ số dòng của một cuộc thi có tên //&quot;CICData trong tôi&quot;//, mà với bạn có thể rút lại bằng một số thứ
 * Ăn rất nhiều
 * Covid làm ở nhà rất nhiều
 * Chơi Poker/3 cây rất nhiều
 Mà 2 trong 3 điều trên đã thay đổi bản chất con người bạn. Nếu bạn còn nhớ ở [[Khởi đầu]], bạn là một thanh niên 70kg như thế nào, thì giờ bạn đã khác...
-Nhưng cái gì cũng phải có [[Chương 4: Hồi kết]]</tw-passagedata><tw-passagedata pid="13" name="Chương 4: Hồi kết" tags="" position="200,1199.5" size="100,100">Ý bạn là cái bài tham dự này, chứ bạn mới tham gia CICData được có 297 ngày thôi, chưa kết được.
+Cũng còn may bạn không máu me bài bạc, chứ không thì bạn còn thay đổi như thế nào nữa?
+Nhưng cái gì cũng phải có [[Chương 4: Hồi kết]]</tw-passagedata><tw-passagedata pid="12" name="Chương 4: Hồi kết" tags="" position="200,1199.5" size="100,100">Ý bạn là cái bài tham dự này, chứ bạn mới tham gia CICData được có 297 ngày thôi, chưa kết được.
 Chưa kể sắp tới là sinh nhật của CICData - lý do chính mà cái bài dự thi này ra đời.
 Và hữu duyên thế nào đó, bạn lại có ngày sinh trùng với công ty. (Bạn nghe nói ai trùng sinh nhật với công ty được tặng quà x2. Nếu chưa có thì tiện thể xin được kính đề nghị BOD thêm điều này vào Nội quy lao động cho anh em khỏi tâm tư).
 Và nhân ngày sinh nhật của bạn, bạn có đôi dòng này:
