--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Chẳng hạn như về:
 Nói chung nhiều thứ khó khăn, khó nhằn. Về kĩ thuật thì không khó, nhưng về vận hành, về business, về thị trường... lại khoai vô cùng.
 Nhưng may mắn trong cuộc chiến đó, bạn luôn có sự hỗ trợ.
 &quot;It&#39;s dangerous to go alone take [[this]]&quot;
-&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; /&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
 Phốt thì nhiều lắm rồi, ví dụ:
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/fe_credit_doino.png&quot; /&gt;
 
@@ -49,7 +49,7 @@ Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn
 Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="422,649.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
 Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác. 
 Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
-Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="201,749.5" size="100,100">Đồng nghiệp,
+Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="146,747.5" size="100,100">Đồng nghiệp,
 &quot;Muốn đi xa thì...&quot;, ấy thôi, bạn không triết lý như vậy.
 Bạn chỉ thấy rằng việc gì khó, thì cần nhiều người.
 Và, may mắn bạn được làm việc cùng với nhiều người giỏi.
