--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Chẳng hạn như về:
 Nói chung nhiều thứ khó khăn, khó nhằn. Về kĩ thuật thì không khó, nhưng về vận hành, về business, về thị trường... lại khoai vô cùng.
 Nhưng may mắn trong cuộc chiến đó, bạn luôn có sự hỗ trợ.
 &quot;It&#39;s dangerous to go alone take [[this]]&quot;
-&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; /&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; width=&quot;500px&quot;/&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
 Phốt thì nhiều lắm rồi, ví dụ:
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/fe_credit_doino.png&quot; /&gt;
 
@@ -66,7 +66,7 @@ Thế nên đừng hỏi tại sao bạn lại không quên được cái lần 
 Ngay trong lúc bạn đang gõ những dòng này, thì mọi người lại ăn...
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/office_hn.png&quot; /&gt;
 ...
-Và thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được kéo dài lê thê chỏ đủ số dòng của một cuộc thi có tên //&quot;CICData trong tôi&quot;//, mà với bạn có thể rút lại bằng một số thứ
+Và thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được kéo dài lê thê cho đủ số dòng của một cuộc thi có tên //&quot;CICData trong tôi&quot;//, mà với bạn CICData trong bạn có thể rút lại bằng một số thứ:
 * Ăn rất nhiều
 * Covid làm ở nhà rất nhiều
 * Chơi Poker/3 cây rất nhiều
