--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</t
 Bạn hay được bảo là là thù dai, nhớ lâu (gift hay curse?)
 Người ta hay bảo là ấn tượng đầu tiên là quan trọng nhất...
 ...
-Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;/imgs/pepeknife.png&quot;&gt;; mấy khi được hưởng cảm giác ngộ độc 2 ngày liền.
+Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/pepeknife.png&quot;&gt;; mấy khi được hưởng cảm giác ngộ độc 2 ngày liền.
 Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="200,1049.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
 Ngay trong lúc bạn đang gõ những dòng này, thì mọi người lại ăn...
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/office_hn.png&quot; /&gt;
