--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play CIC Quest.</tw-noscript></noscript></tw-story>
-<tw-storydata name="CIC Quest" startnode="1" creator="Twine" creator-version="2.3.16" ifid="8DBADD4C-7F1B-4E5B-98D2-A090D875264B" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Khởi đầu" tags="" position="29,49.5" size="100,100">Chào chiến binh dũng cảm,
+<tw-storydata name="CIC Quest" startnode="1" creator="Twine" creator-version="2.3.16" ifid="8DBADD4C-7F1B-4E5B-98D2-A090D875264B" zoom="0.6" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Khởi đầu" tags="" position="169,27.833333333333332" size="100,100">Chào chiến binh dũng cảm,
 
 Chào mừng bạn đến với &#39;&#39;CICData Quest.&#39;&#39;
 
@@ -17,7 +17,7 @@ Chào mừng bạn đến với &#39;&#39;CICData Quest.&#39;&#39;
 
 Bạn là một thanh niên 28 tuổi, 1m79 (làm tròn 1m8), 70kg.
 
-Vừa nghỉ việc tại một tập đoàn công nghiệp - viễn thông - quân đội hàng đầu Việt Nam, đang lúc bơ vơ chưa về bờ, đang rải CV khắp nơi, thì bạn được biết đến cái tên &#39;&#39;CICData&#39;&#39;.
+Vừa thất viejc sau khi làm việc tại một tập đoàn công nghiệp - viễn thông - quân đội hàng đầu Việt Nam; đang lúc bơ vơ chưa về bờ, rải CV khắp nơi, thì bạn được biết đến cái tên &#39;&#39;CICData&#39;&#39;.
 
 Bạn làm gì? [[Từ chối luôn]] hay [[Thử sức]]?</tw-passagedata><tw-passagedata pid="3" name="Thử sức" tags="" position="149,366.5" size="100,100">Bạn google tên công ty thì thấy công ty gần như không tồn tại trên Internet. Không Facebook, web ít thông tin, Linkedin cũng không...
 Bạn ban đầu còn tưởng đây chính là TRUNG TÂM THÔNG TIN TÍN DỤNG QUỐC GIA VIỆT NAM.
@@ -31,14 +31,14 @@ Bla bla, phổ cập về công việc, business của công ty... bạn thấy 
 Cũng 2 năm rồi bạn làm việc ở tập đoàn lớn, đang thấy khó chịu với sự gò bó, quan liêu, chậm chạp... nên nghe thấy công việc bạn thấy có vẻ phù hợp với mình.
 Và đặc biệt là khi nói chuyện với sếp Nam. &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/cto.png&quot; /&gt;
 Ít khi bạn thấy ngưỡng mộ với người đối diện như khi nói chuyện với sếp, là cảm giác khi gặp người hiểu nhiều biết rộng hơn bạn nhiều về công nghệ. 
-Và thế là bắt đầu cuộc sống với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="302,499.5" size="100,100">Có nhiều thứ khi làm rồi mới hiểu.
+Và thế là bắt đầu cuộc sống với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="298,507.5" size="100,100">Có nhiều thứ khi làm rồi mới hiểu và mới thấy:
 Chẳng hạn như về:
 * [[FI, FE và cho vay nói chung]] 
 * [[Fraudster]]
 Nói chung nhiều thứ khó khăn, khó nhằn. Về kĩ thuật thì không khó, nhưng về vận hành, về business, về thị trường... lại khoai vô cùng.
 Nhưng may mắn trong cuộc chiến đó, bạn luôn có sự hỗ trợ.
 &quot;It&#39;s dangerous to go alone take [[this]]&quot;
-&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; width=&quot;500px&quot;/&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="302,649.5" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; width=&quot;500px&quot;/&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="303.6666666666667,746.8333333333334" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
 Phốt thì nhiều lắm rồi, ví dụ:
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/fe_credit_doino.png&quot; /&gt;
 
@@ -46,10 +46,10 @@ Rồi thì lãi suất theo bạn thì vẫn là cắt cổ.
 
 Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền.
 Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn tốt hơn là vay ở cột điện.
-Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="422,649.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
+Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="463,747.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
 Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác. 
 Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
-Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="146,747.5" size="100,100">Đồng nghiệp,
+Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="151,755.8333333333334" size="100,100">Đồng nghiệp,
 &quot;Muốn đi xa thì...&quot;, ấy thôi, bạn không triết lý như vậy.
 Bạn chỉ thấy rằng việc gì khó, thì cần nhiều người.
 Và, may mắn bạn được làm việc cùng với nhiều người giỏi.
@@ -57,12 +57,12 @@ Bạn thấy rằng: so với mặt bằng chung, đồng nghiệp của bạn c
 Chứ chơi Dota 2, ở SEA, rank 3k, nên bạn biết từ &quot;đồng đội tốt&quot; nó thiêng liêng như thế nào.
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/dota.jpeg&quot; /&gt;
 Nói đến đây, bạn thật lòng muốn xin lỗi đồng nghiệp, vì bạn... giải nghệ game lâu rồi...
-Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="10" name="Chương 3: Ăn, chơi" tags="" position="200,899.5" size="100,100">Bạn có trí nhớ tốt
+Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="10" name="Chương 3: Ăn, chơi" tags="" position="302.3333333333333,896.1666666666666" size="100,100">Bạn có trí nhớ tốt
 Bạn hay được bảo là là thù dai, nhớ lâu (gift hay curse?)
 Người ta hay bảo là ấn tượng đầu tiên là quan trọng nhất...
 ...
 Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/pepeknife.png&quot;&gt;; mấy khi được hưởng cảm giác ngộ độc 2 ngày liền.
-Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="200,1049.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
+Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="102,1024.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
 Ngay trong lúc bạn đang gõ những dòng này, thì mọi người lại ăn...
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/office_hn.png&quot; /&gt;
 ...
@@ -70,14 +70,15 @@ Và thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được
 * Ăn rất nhiều
 * Covid làm ở nhà rất nhiều
 * Chơi Poker/3 cây rất nhiều
-Mà 2 trong 3 điều trên đã thay đổi bản chất con người bạn. Nếu bạn còn nhớ ở [[Khởi đầu]], bạn là một thanh niên 70kg như thế nào, thì giờ bạn đã khác...
+Mà 2 trong 3 điều trên đã thay đổi bản chất con người bạn. Nếu bạn còn nhớ ở [[Chương 1: Cơ duyên]], bạn là một thanh niên 70kg như thế nào, thì giờ bạn đã khác...
 Cũng còn may bạn không máu me bài bạc, chứ không thì bạn còn thay đổi như thế nào nữa?
-Nhưng cái gì cũng phải có [[Chương 4: Hồi kết]]</tw-passagedata><tw-passagedata pid="12" name="Chương 4: Hồi kết" tags="" position="200,1199.5" size="100,100">Ý bạn là cái bài tham dự này, chứ bạn mới tham gia CICData được có 297 ngày thôi, chưa kết được.
+Mặc dù những buổi đi ăn làm tình đồng chí thêm gắn kết, mà bạn mới phát hiện ra không chỉ có mình bạn thuộc làu sử Tàu chẳng hạn.
+Rồi cái gì cũng phải có [[Chương 4: Hồi kết]]</tw-passagedata><tw-passagedata pid="12" name="Chương 4: Hồi kết" tags="" position="101,1198.5" size="100,100">Ý bạn là cái bài tham dự này, chứ bạn mới tham gia CICData được có 297 ngày thôi, kết kết cái gì?
 Chưa kể sắp tới là sinh nhật của CICData - lý do chính mà cái bài dự thi này ra đời.
-Và hữu duyên thế nào đó, bạn lại có ngày sinh trùng với công ty. (Bạn nghe nói ai trùng sinh nhật với công ty được tặng quà x2. Nếu chưa có thì tiện thể xin được kính đề nghị BOD thêm điều này vào Nội quy lao động cho anh em khỏi tâm tư).
+Và hữu duyên thiên lý năng tương ngộ thế nào đó, bạn lại có ngày sinh trùng với công ty. (Bạn nghe nói &#39;&#39;ai trùng sinh nhật với công ty được tặng quà x2&#39;&#39;. Nếu chưa có thì tiện thể xin được kính đề nghị BOD thêm điều này vào Nội quy lao động cho anh em khỏi tâm tư).
 Và nhân ngày sinh nhật của bạn, bạn có đôi dòng này:
 Bạn mong CICData càng ngày càng phát triển, doanh thu tăng đều đều mỗi mùa sinh nhật.
-Và để làm được điều đó bạn thấy rằng mình phải cố gắng hơn nữa, chứ tiền hay giá trị thặng dư không tự nhiên sinh ra và mất đi; nó chỉ xuất hiện trong lao động mà ra.</tw-passagedata></tw-storydata>
+Công ty càng ngày càng đông, anh chị em đều mạnh khỏe để cống hiến &amp; để còn có những bữa ăn, mà bạn tin rằng không còn là bữa ăn Covid nữa; bởi ai cũng là F0 cả rồi còn đâu...</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
