--- a/index.html
+++ b/index.html
@@ -13,60 +13,61 @@
 
 Chào mừng bạn đến với &#39;&#39;CICData Quest.&#39;&#39;
 
-Đây là chặng đường thật 99%, quá trình chinh phục CICData của bạn! Và hãy bắt đầu bằng [[Chương 1: Cơ duyên]] nhé!</tw-passagedata><tw-passagedata pid="2" name="Chương 1: Cơ duyên" tags="" position="49,213.5" size="100,100">Một ngày đẹp trời tháng 4 năm Covid thứ 2 (2021),
+Đây là chặng đường thật 99%, quá trình tương ngộ CICData của bạn! Và hãy bắt đầu bằng [[Chương 1: Cơ duyên]] nhé!</tw-passagedata><tw-passagedata pid="2" name="Chương 1: Cơ duyên" tags="" position="55.666666666666664,188.5" size="100,100">Một ngày đẹp trời tháng 4 năm Covid thứ 2 (2021),
 
 Bạn là một thanh niên 28 tuổi, 1m79 (làm tròn 1m8), 70kg.
 
 Vừa thất viejc sau khi làm việc tại một tập đoàn công nghiệp - viễn thông - quân đội hàng đầu Việt Nam; đang lúc bơ vơ chưa về bờ, rải CV khắp nơi, thì bạn được biết đến cái tên &#39;&#39;CICData&#39;&#39;.
 
-Bạn làm gì? [[Từ chối luôn]] hay [[Thử sức]]?</tw-passagedata><tw-passagedata pid="3" name="Thử sức" tags="" position="149,366.5" size="100,100">Bạn google tên công ty thì thấy công ty gần như không tồn tại trên Internet. Không Facebook, web ít thông tin, Linkedin cũng không...
-Bạn ban đầu còn tưởng đây chính là TRUNG TÂM THÔNG TIN TÍN DỤNG QUỐC GIA VIỆT NAM.
-Nhưng bạn là người đam mê dữ liệu, nghe nói đang làm việc với cả 3 nhà mạng lớn nên cũng tò mò.
-Và thế là có [[buổi gặp đầu tiên]]</tw-passagedata><tw-passagedata pid="4" name="Từ chối luôn" tags="" position="0,364.5" size="100,100">Ê ê, đây là chuyện thật 99%.
+Bạn làm gì? [[Từ chối luôn]] hay [[Thử sức]]?</tw-passagedata><tw-passagedata pid="3" name="Thử sức" tags="" position="210.66666666666669,314.8333333333333" size="100,100">Bạn google tên công ty thì thấy công ty gần như không tồn tại trên Internet. Không Facebook, web ít thông tin, Linkedin cũng không thấy gì...
+(cũng là lý do mà về sau bạn biết được công ty chỉ tuyển dụng được qua refer...)
+Bạn ban đầu còn tưởng đây chính là TRUNG TÂM THÔNG TIN TÍN DỤNG QUỐC GIA VIỆT NAM - CIC.
+Nhưng bạn là người đam mê làm việc với dữ liệu, nghe nói đang làm việc với cả 3 nhà mạng lớn nên cũng tò mò.
+Và thế là có [[buổi gặp đầu tiên]]</tw-passagedata><tw-passagedata pid="4" name="Từ chối luôn" tags="" position="6.666666666666667,407.8333333333333" size="100,100">Ê ê, đây là chuyện thật 99%.
 
 Từ chối thì làm gì có chương sau =))
 
-[[Thử sức]] nào!</tw-passagedata><tw-passagedata pid="5" name="buổi gặp đầu tiên" tags="" position="299,365.5" size="100,100">Tiếp bạn là anh Ngọc, và Nam Đoàn.
-Bla bla, phổ cập về công việc, business của công ty... bạn thấy dần hứng thú với công việc.
-Cũng 2 năm rồi bạn làm việc ở tập đoàn lớn, đang thấy khó chịu với sự gò bó, quan liêu, chậm chạp... nên nghe thấy công việc bạn thấy có vẻ phù hợp với mình.
+[[Thử sức]] nào!</tw-passagedata><tw-passagedata pid="5" name="buổi gặp đầu tiên" tags="" position="365.6666666666667,347.1666666666667" size="100,100">Nhân vật đầu tiên ở CICData bạn gặp là anh Ngọc Ngọt Ngào, và Nam Đoàn.
+Bla bla, bạn sẽ làm gì, công ty làm gì... bạn thấy dần hứng thú với công việc.
+Cũng 2 năm rồi bạn làm việc ở tập đoàn lớn, đang thấy khó chịu với sự gò bó, quan liêu, chậm chạp... nên nghe thấy công việc, công ty bạn thấy có vẻ phù hợp với mình. Bạn nghĩ sẽ có thể tự do, có đóng góp lớn trong môi trường như vậy.
 Và đặc biệt là khi nói chuyện với sếp Nam. &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/cto.png&quot; /&gt;
-Ít khi bạn thấy ngưỡng mộ với người đối diện như khi nói chuyện với sếp, là cảm giác khi gặp người hiểu nhiều biết rộng hơn bạn nhiều về công nghệ. 
-Và thế là bắt đầu cuộc sống với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="298,507.5" size="100,100">Có nhiều thứ khi làm rồi mới hiểu và mới thấy:
+Ít khi bạn thấy ngưỡng mộ với người đối, là cảm giác khi gặp người hiểu nhiều biết rộng hơn bạn nhiều về một thứ. 
+Và bạn nhận việc. Và bắt đầu hành trình với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="298,549.1666666666666" size="100,100">Có nhiều thứ khi làm trực tiếp rồi mới hiểu hơn.
 Chẳng hạn như về:
 * [[FI, FE và cho vay nói chung]] 
 * [[Fraudster]]
 Nói chung nhiều thứ khó khăn, khó nhằn. Về kĩ thuật thì không khó, nhưng về vận hành, về business, về thị trường... lại khoai vô cùng.
 Nhưng may mắn trong cuộc chiến đó, bạn luôn có sự hỗ trợ.
 &quot;It&#39;s dangerous to go alone take [[this]]&quot;
-&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; width=&quot;500px&quot;/&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="303.6666666666667,746.8333333333334" size="100,100">Cũng nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT
+&lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/zelda.jpeg&quot; width=&quot;500px&quot;/&gt;</tw-passagedata><tw-passagedata pid="7" name="FI, FE và cho vay nói chung" tags="" position="315.33333333333337,756.8333333333334" size="100,100">Cũng như nhiều người, bạn không có cái nhìn thiện cảm lắm với cái tên FE CREDIT.
 Phốt thì nhiều lắm rồi, ví dụ:
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/fe_credit_doino.png&quot; /&gt;
 
-Rồi thì lãi suất theo bạn thì vẫn là cắt cổ.
-
-Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền.
-Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn tốt hơn là vay ở cột điện.
-Và cuối cùng thì, có FE CREDIT trả tiền thì bạn mới đang làm việc &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="463,747.5" size="100,100">Bạn cũng đã có 3 năm chống fraud một phần của digital marketing rồi.
-Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác. 
+Rồi thì lãi suất theo bạn thì vẫn là cắt cổ (vẫn thấp hơn cầm đồ, cột điện)
+Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền. Một anh công nhân cần xe máy đi làm, một người mẹ cần tiền mua thuốc cho con... họ làm gì có lựa chọn?
+Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn được kiểm soát bởi NHNN, và vẫn tốt hơn là vay ở cột điện.
+Và quan trọng: cuối cùng thì, FI là khách hàng, họ trả tiền thì công ty mới có doanh thu, và bạn mới có việc mà làm &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="458,762.5" size="100,100">Bạn cũng đã có vài năm năm chống fraud của digital marketing rồi.
+Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác.
 Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
-Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang người anh em.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="151,755.8333333333334" size="100,100">Đồng nghiệp,
+Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang các người anh em tốt.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="151,752.5" size="100,100">Đồng nghiệp,
 &quot;Muốn đi xa thì...&quot;, ấy thôi, bạn không triết lý như vậy.
 Bạn chỉ thấy rằng việc gì khó, thì cần nhiều người.
 Và, may mắn bạn được làm việc cùng với nhiều người giỏi.
 Bạn thấy rằng: so với mặt bằng chung, đồng nghiệp của bạn có kĩ năng tốt, nhanh nhẹn, có trách nhiệm... bla bla. May quá.
 Chứ chơi Dota 2, ở SEA, rank 3k, nên bạn biết từ &quot;đồng đội tốt&quot; nó thiêng liêng như thế nào.
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/dota.jpeg&quot; /&gt;
-Nói đến đây, bạn thật lòng muốn xin lỗi đồng nghiệp, vì bạn... giải nghệ game lâu rồi...
-Và nói đến đây, chúng ta cũng phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="10" name="Chương 3: Ăn, chơi" tags="" position="302.3333333333333,896.1666666666666" size="100,100">Bạn có trí nhớ tốt
+Nói đến đây, bạn thật lòng muốn xin lỗi đồng nghiệp, vì bạn... giải nghệ game cũng lâu rồi. Cuộc sống gia đình đôi khi không cho con người ta làm game thủ...
+Và nói đến đây, chúng ta cũng cần phải sang [[Chương 3: Ăn, chơi]]</tw-passagedata><tw-passagedata pid="10" name="Chương 3: Ăn, chơi" tags="" position="302.3333333333333,896.1666666666666" size="100,100">Bạn có trí nhớ tốt
 Bạn hay được bảo là là thù dai, nhớ lâu (gift hay curse?)
 Người ta hay bảo là ấn tượng đầu tiên là quan trọng nhất...
 ...
 Thế nên đừng hỏi tại sao bạn lại không quên được cái lần Happy Friday lần đầu tiên với công ty &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/pepeknife.png&quot;&gt;; mấy khi được hưởng cảm giác ngộ độc 2 ngày liền.
-Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="102,1024.5" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
+Hay như vì tò mò, bạn thử chơi Poker mà vẫn chưa biết thắng là như thế nào...
+Âu cũng là điều kiện để bạn thấy rằng, [[sự thật]] về công ty này là như thế nào...</tw-passagedata><tw-passagedata pid="11" name="sự thật" tags="" position="52,1017.8333333333334" size="100,100">... sự thật là CICData ăn &amp; chơi rất nhiều.
 Ngay trong lúc bạn đang gõ những dòng này, thì mọi người lại ăn...
 &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/office_hn.png&quot; /&gt;
 ...
-Và thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được kéo dài lê thê cho đủ số dòng của một cuộc thi có tên //&quot;CICData trong tôi&quot;//, mà với bạn CICData trong bạn có thể rút lại bằng một số thứ:
+Và sự thật ra toàn bộ cái Quest này chỉ là một áng văn vẻ được kéo dài lê thê cho đủ số dòng của một cuộc thi có tên //&quot;CICData trong tôi&quot;//, mà với bạn CICData trong bạn có thể rút lại bằng một số thứ:
 * Ăn rất nhiều
 * Covid làm ở nhà rất nhiều
 * Chơi Poker/3 cây rất nhiều
