--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Phốt thì nhiều lắm rồi, ví dụ:
 Rồi thì lãi suất theo bạn thì vẫn là cắt cổ (vẫn thấp hơn cầm đồ, cột điện)
 Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền. Một anh công nhân cần xe máy đi làm, một người mẹ cần tiền mua thuốc cho con... họ làm gì có lựa chọn?
 Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn được kiểm soát bởi NHNN, và vẫn tốt hơn là vay ở cột điện.
-Và quan trọng: cuối cùng thì, FI là khách hàng, họ trả tiền thì công ty mới có doanh thu, và bạn mới có việc mà làm &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/haha.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="458,762.5" size="100,100">Bạn cũng đã có vài năm năm chống fraud của digital marketing rồi.
+Và quan trọng: cuối cùng thì, FI là khách hàng, họ trả tiền thì công ty mới có doanh thu, và bạn mới có việc mà làm &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/hehe.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="458,762.5" size="100,100">Bạn cũng đã có vài năm năm chống fraud của digital marketing rồi.
 Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác.
 Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
 Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang các người anh em tốt.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="151,752.5" size="100,100">Đồng nghiệp,
