--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
 Chào mừng bạn đến với &#39;&#39;CICData Quest.&#39;&#39;
 
-Đây là chặng đường thật 99%, quá trình tương ngộ CICData của bạn! Và hãy bắt đầu bằng [[Chương 1: Cơ duyên]] nhé!</tw-passagedata><tw-passagedata pid="2" name="Chương 1: Cơ duyên" tags="" position="55.666666666666664,188.5" size="100,100">Một ngày đẹp trời tháng 4 năm Covid thứ 2 (2021),
+Đây là chặng đường thật 99%, quá trình tương ngộ CICData của bạn! Và hãy bắt đầu bằng [[Chương 1: Cơ duyên]] nhé!</tw-passagedata><tw-passagedata pid="2" name="Chương 1: Cơ duyên" tags="" position="120.66666666666666,183.5" size="100,100">Một ngày đẹp trời năm Covid thứ 2 (2021),
 
-Bạn là một thanh niên 28 tuổi, 1m79 (làm tròn 1m8), 70kg.
-
-Vừa thất viejc sau khi làm việc tại một tập đoàn công nghiệp - viễn thông - quân đội hàng đầu Việt Nam; đang lúc bơ vơ chưa về bờ, rải CV khắp nơi, thì bạn được biết đến cái tên &#39;&#39;CICData&#39;&#39;.
+Bạn là một thanh niên vừa thất nghiệp sau khi làm việc tại một tập đoàn công nghiệp - viễn thông - quân đội hàng đầu Việt Nam; đang lúc bơ vơ chưa về bờ, rải CV khắp nơi, thì bạn được biết đến cái tên &#39;&#39;CICData&#39;&#39;.
 
 Bạn làm gì? [[Từ chối luôn]] hay [[Thử sức]]?</tw-passagedata><tw-passagedata pid="3" name="Thử sức" tags="" position="210.66666666666669,314.8333333333333" size="100,100">Bạn google tên công ty thì thấy công ty gần như không tồn tại trên Internet. Không Facebook, web ít thông tin, Linkedin cũng không thấy gì...
 (cũng là lý do mà về sau bạn biết được công ty chỉ tuyển dụng được qua refer...)
@@ -30,8 +28,7 @@ Từ chối thì làm gì có chương sau =))
 [[Thử sức]] nào!</tw-passagedata><tw-passagedata pid="5" name="buổi gặp đầu tiên" tags="" position="365.6666666666667,347.1666666666667" size="100,100">Nhân vật đầu tiên ở CICData bạn gặp là anh Ngọc Ngọt Ngào, và Nam Đoàn.
 Bla bla, bạn sẽ làm gì, công ty làm gì... bạn thấy dần hứng thú với công việc.
 Cũng 2 năm rồi bạn làm việc ở tập đoàn lớn, đang thấy khó chịu với sự gò bó, quan liêu, chậm chạp... nên nghe thấy công việc, công ty bạn thấy có vẻ phù hợp với mình. Bạn nghĩ sẽ có thể tự do, có đóng góp lớn trong môi trường như vậy.
-Và đặc biệt là khi nói chuyện với sếp Nam. &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/cto.png&quot; /&gt;
-Ít khi bạn thấy ngưỡng mộ với người đối, là cảm giác khi gặp người hiểu nhiều biết rộng hơn bạn nhiều về một thứ. 
+Rồi sau khi gặp anh CTO &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/cto.png&quot; /&gt;, bạn hiểu rõ hơn, thấy thuyết phục.
 Và bạn nhận việc. Và bắt đầu hành trình với CICData! [[Chương 2: Công việc]]</tw-passagedata><tw-passagedata pid="6" name="Chương 2: Công việc" tags="" position="298,549.1666666666666" size="100,100">Có nhiều thứ khi làm trực tiếp rồi mới hiểu hơn.
 Chẳng hạn như về:
 * [[FI, FE và cho vay nói chung]] 
@@ -46,9 +43,9 @@ Phốt thì nhiều lắm rồi, ví dụ:
 Rồi thì lãi suất theo bạn thì vẫn là cắt cổ (vẫn thấp hơn cầm đồ, cột điện)
 Nhưng làm việc trực tiếp, bạn nhận ra tại sao hàng ngàn người vẫn lao đầu vào vay: đơn giản vì họ cần tiền. Một anh công nhân cần xe máy đi làm, một người mẹ cần tiền mua thuốc cho con... họ làm gì có lựa chọn?
 Và lãi suất của các công ty tài chính có cao đến mấy, thì vẫn được kiểm soát bởi NHNN, và vẫn tốt hơn là vay ở cột điện.
-Và quan trọng: cuối cùng thì, FI là khách hàng, họ trả tiền thì công ty mới có doanh thu, và bạn mới có việc mà làm &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/hehe.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="458,762.5" size="100,100">Bạn cũng đã có vài năm năm chống fraud của digital marketing rồi.
+Và quan trọng: cuối cùng thì, FI là khách hàng, họ trả tiền thì công ty mới có doanh thu, và bạn mới có việc mà làm &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/hehe.png&quot; /&gt;</tw-passagedata><tw-passagedata pid="8" name="Fraudster" tags="" position="459.6666666666667,755.8333333333334" size="100,100">Bạn cũng đã có vài năm năm chống fraud của digital marketing rồi.
 Nhưng rồi bạn lại nhận ra hình thái fraud ở mỗi chỗ một khác.
-Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chuyển từ channel này sang channel khác&quot;.
+Và như anh &lt;img src=&quot;https://vietvudanh.github.io/mycic/imgs/ducluong.png&quot; /&gt; có nói: &quot;Fraud không tự nhiên sinh ra và mất đi, chúng nó chỉ chuyển từ channel này sang channel khác&quot;.
 Điều tốt nhận bạn có thể làm chỉ là mong chúng nó đừng fraud vào CICData, mà hãy fraud sang các người anh em tốt.</tw-passagedata><tw-passagedata pid="9" name="this" tags="" position="151,752.5" size="100,100">Đồng nghiệp,
 &quot;Muốn đi xa thì...&quot;, ấy thôi, bạn không triết lý như vậy.
 Bạn chỉ thấy rằng việc gì khó, thì cần nhiều người.
